data/derived/comb/progs/unify/prog4308.ml.out
Characters 37-38:
  let rec fixpoint (f,b) = wwhile(f * (f b = b), b);;
                                       ^
Error: This expression has type int
       This is not a function; it cannot be applied.
